kustomize/base/frontend.yaml
apiVersion: v1
kind: Service
metadata:
  name: todo-frontend
spec:
  type: ClusterIP
  selector:
    app: todo-frontend
  ports:
    - port: 3000
      targetPort: 3000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo-frontend
spec:
  selector:
    matchLabels:
      app: todo-frontend
  template:
    metadata:
      labels:
        app: todo-frontend
    spec:
      containers:
        - name: frontend
          image: gokulpant/todo-frontend
          ports:
            - containerPort: 3000
